Add jwt, fix api